# llmdocparser

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  log_config.py  output.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
llm_chain/: llm_factory.py  llm_inference.py
llmdocparser/: .gitignore  llm_parser.py  log_config.py
llmdocparser/llm_chain/: llm_inference.py
llmdocparser/parser/: layout_parser.py  rect_merge.py
parser/: layout_parser.py  llm_parser.py  parser.py  rect_merge.py
